deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: PLACEHOLDER_FOR_NAME_
  namespace: "PLACEHOLDER_FOR_NAMESPACE"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: PLACEHOLDER_FOR_NAME_
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: PLACEHOLDER_FOR_NAME_
      annotations:
        redeploy-hash: "PLACEHOLDER_FOR_IMAGE_HASH"

    spec:
      containers:
      - name: PLACEHOLDER_FOR_NAME_
        image: "PLACEHOLDER_FOR_IMAGE"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registry-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 10
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: PLACEHOLDER_FOR_NAME_-service
spec:
  type: ClusterIP
  selector:
    app: PLACEHOLDER_FOR_NAME_
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
  name: PLACEHOLDER_FOR_URL
spec:
  ingressClassName: public
  rules:
  - host: PLACEHOLDER_FOR_URL
    http:
      paths:
      - backend:
          service:
            name: PLACEHOLDER_FOR_NAME_-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - PLACEHOLDER_FOR_URL
    secretName: PLACEHOLDER_FOR_URL-tls
